--- a/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
+++ b/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
@@ -38,6 +38,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <CodeAnalysisRuleSet>LuaDebuggerLauncher.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -47,6 +48,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <CodeAnalysisRuleSet>LuaDebuggerLauncher.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Build" />
@@ -83,6 +85,7 @@
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="LuaDebuggerLauncher.ruleset" />
     <None Include="[PlatformName]\ImportAfter\Lua.targets" />
     <None Include="[PlatformName]\ImportBefore\Lua.props" />
     <None Include="tools\CommonProjectSystemExtension.props" />
