--- a/src/LanguageModel/project.json
+++ b/src/LanguageModel/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "dependencies": {
-    "ImmutableObjectGraph.Generation": "1.0.15192-beta7",
+    "ImmutableObjectGraph.Generation": "1.1.7-beta",
     "Microsoft.VisualStudio.Validation": "14.0.51103",
     "StyleCop.Analyzers": "1.0.0-rc3"
   },
