--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 version: 1.0.{build}
+image: Visual Studio 2017
+configuration: Release
 before_build:
 - ps: nuget restore src -Verbosity quiet
 build:
