--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,7 @@
     <add key="repositorypath" value="packages" />
   </config>
   <packageSources>
+    <clear />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
