--- a/src/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/src/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -88,7 +88,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="LanguageModel.Tests.ruleset" />
-    <None Include="App.config" />
     <None Include="CorrectSampleLuaFiles\AssignmentForIORead.lua">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -251,6 +250,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.1.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.1.0" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
